# SDL-Game

./: CMakeLists.txt  README.md  flake.nix
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: engine.c  main.c
src/include/: engine.h
